unpackaged/main/default/objects/cmbls__Repayment__c/fields/Terminated_Status__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Status__c</fullName>
    <formula>OR(
            ISPICKVAL(cmbls__Status__c, "Complete"),
			ISPICKVAL(cmbls__Status__c, "Write Off"),
			ISPICKVAL(cmbls__Status__c, "Unwind")
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terminated Status</label>
    <type>Checkbox</type>
</CustomField>