unpackaged/main/default/objects/cmbls__Repayment__c/fields/Termination_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason_Code__c</fullName>
    <label>Termination Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>