unpackaged/main/default/objects/cmbls__Repayment__c/fields/Total_Broker_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Broker_Fee__c</fullName>
    <label>Total Broker Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>