unpackaged/main/default/objects/cmbls__Repayment__c/fields/Total_Broker_Fee_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Broker_Fee_Expense__c</fullName>
    <label>Total Broker Fee Expense</label>
    <summarizedField>cmbls__Expense__c.cmbls__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>cmbls__Expense__c.cmbls__Fee_Type__c</field>
        <operation>equals</operation>
        <value>Broker Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>cmbls__Expense__c.cmbls__Repayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>