unpackaged/main/default/objects/cmbls__Repayment__c/fields/Total_Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Amount__c</fullName>
    <label>Total Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>