unpackaged/main/default/objects/cmbls__Repayment__c/fields/Total_Expected_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Payments__c</fullName>
    <label>Total Expected Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>