unpackaged/main/default/objects/cmbls__Repayment__c/fields/Total_LendingTree_RevShare__c.field-meta.xml
<CustomField>
    <fullName>Total_LendingTree_RevShare__c</fullName>
    <label>Total LendingTree RevShare</label>
    <summarizedField>cmbls__Expense__c.cmbls__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>cmbls__Expense__c.cmbls__Fee_Type__c</field>
        <operation>equals</operation>
        <value>RevShare</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>cmbls__Expense__c.Lead_Provider__c</field>
        <operation>equals</operation>
        <value>LendingTree</value>
    </summaryFilterItems>
    <summaryForeignKey>cmbls__Expense__c.cmbls__Repayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>