unpackaged/main/default/objects/cmbls__Repayment__c/fields/Total_Rev_Share__c.field-meta.xml
<CustomField>
    <fullName>Total_Rev_Share__c</fullName>
    <label>Total Rev Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>