unpackaged/main/default/objects/cmbls__Repayment__c/fields/Total_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Total_Settlement__c</fullName>
    <label>Total Settlement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>