unpackaged/main/default/objects/cmbls__Repayment__c/recordTypes/cmbls__ACH.recordType-meta.xml
<RecordType>
    <fullName>cmbls__ACH</fullName>
    <active>false</active>
    <label>ACH</label>
</RecordType>