unpackaged/main/default/objects/cmbls__Repayment__c/recordTypes/cmbls__ACH_Recurring.recordType-meta.xml
<RecordType>
    <fullName>cmbls__ACH_Recurring</fullName>
    <active>true</active>
    <label>ACH Recurring</label>
</RecordType>