unpackaged/main/default/objects/cmbls__Repayment__c/recordTypes/cmbls__Interest_Based.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Interest_Based</fullName>
    <active>true</active>
    <label>Interest Based</label>
</RecordType>