unpackaged/main/default/objects/cmbls__Repayment__c/recordTypes/cmbls__Investor_Loan.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Investor_Loan</fullName>
    <active>false</active>
    <label>Investor Loan</label>
</RecordType>