unpackaged/main/default/objects/cmbls__Repayment__c/recordTypes/cmbls__One_Time.recordType-meta.xml
<RecordType>
    <fullName>cmbls__One_Time</fullName>
    <active>true</active>
    <label>ACH One-Time</label>
</RecordType>