unpackaged/main/default/objects/cmbls__Repayment__c/recordTypes/cmbls__Splits.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Splits</fullName>
    <active>false</active>
    <label>Splits</label>
</RecordType>